@@ -1,5 +1,5 @@
 //
-// "$Id: fl_set_font.cxx,v 1.5.2.3.2.5 2002/04/11 11:52:43 easysw Exp $"
+// "$Id: fl_set_font.cxx,v 1.5.2.3.2.6 2002/05/25 13:38:25 easysw Exp $"
 //
 // Font utilities for the Fast Light Tool Kit (FLTK).
 //
@@ -26,12 +26,11 @@
 // Add a font to the internal table.
 // Also see fl_set_fonts.cxx which adds all possible fonts.
 
-#include <config.h>
 #include <FL/Fl.H>
 #include <FL/x.H>
+#include "flstring.h"
 #include "Fl_Font.H"
 #include <stdlib.h>
-#include "flstring.h"
 
 static int table_size;
 
@@ -75,5 +74,5 @@ void Fl::set_font(Fl_Font fnum, Fl_Font from) {
 const char* Fl::get_font(Fl_Font fnum) {return fl_fonts[fnum].name;}
 
 //
-// End of "$Id: fl_set_font.cxx,v 1.5.2.3.2.5 2002/04/11 11:52:43 easysw Exp $".
+// End of "$Id: fl_set_font.cxx,v 1.5.2.3.2.6 2002/05/25 13:38:25 easysw Exp $".
 //
