@@ -1,8 +1,14 @@
 CHANGES IN FLTK 1.1.0rc3
 
 	- Documentation updates.
-	- Fl_BMP_Image, Fl_JPEG_Image, Fl_PNG_Image, and Fl_Shared_Image
-	  didn't delete image data that was allocated.
+	- Fl_Shared_Image used a double-pointer to the image
+	  handler functions, which was unnecessary and
+	  unintuitive.
+	- Fl_PNM_Image didn't load the height of the image
+	  properly.
+	- Fl_BMP_Image, Fl_JPEG_Image, Fl_PNG_Image, and
+	  Fl_Shared_Image didn't delete image data that was
+	  allocated.
 	- Enabled the OpenGL and threads demos when compiling
 	  for MingW.
 	- Fl_File_Input didn't update the directory buttons if a
